manifests/frontend/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-health-console
  namespace: openshift-cluster-health-analyzer
  labels:
    app: cluster-health-console
spec:
  ports:
  - port: 8051
    protocol: TCP
    targetPort: 8051
    name: http
  selector:
    app: cluster-health-console
