manifests/frontend/04_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cluster-health-console
  namespace: cluster-health-analyzer
  labels:
    app: cluster-health-console
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: cluster-health-console
    weight: 100
  wildcardPolicy: None
